outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval6450598394033214077_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine immediate distance, future potential, and long-term centrality, with adaptive weights that emphasize either local efficiency or global optimization based on the remaining unvisited nodes, while adding a probabilistic selection mechanism to introduce controlled randomness and improve solution diversity.}
                                                                                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores that combine immediate distance, future potential, and long-term centrality, with adaptive weights that emphasize either local efficiency or global optimization based on the remaining unvisited nodes, while adding a probabilistic selection mechanism to introduce controlled randomness and improve solution diversity.}
                                                                                                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
